--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -1,6 +1,8 @@
 ---
 # Disable monitoring for now
 profile::base::monitoring: false
+profile::plex_media_server::monitoring: false
+profile::local_firewall::monitoring: false
 
 ## Global Group/User Management ##
 managed_groups:
