--- a/hieradata/node/r2.yaml
+++ b/hieradata/node/r2.yaml
@@ -26,3 +26,9 @@ ca_certs_for_system:
     customstore: {
       certfilename: '/etc/pki/tls/certs/cacert_org_root.crt'
     }
+
+# {{{ profile::grafana
+profile::grafana::monitoring: false
+profile::grafana::site_name: 'grafana.techtaco.org'
+profile::grafana::ssl_cert: '/etc/pki/tls/certs/wildcard.techtaco.org-server.crt'
+profile::grafana::ssh_key: '/etc/pki/tls/private/wildcard.techtaco.org-server.key'
