adding admin user management

--- a/hieradata/node/r2.yaml
+++ b/hieradata/node/r2.yaml
@@ -34,4 +34,6 @@ profile::grafana::ssl_cert: '/etc/pki/tls/certs/wildcard.techtaco.org-server.crt
 profile::grafana::ssl_key: '/etc/pki/tls/private/wildcard.techtaco.org-server.key'
 profile::grafana::version: '3.1.1'
 profile::grafana::rpm_iteration: '1470047149'
+profile::grafana::admin_user: 'smbambling'
+profile::grafana::admin_pass: 'qwerty1234'
 # }}}
