moving to virtualhost parameter

--- a/hieradata/node/r2.yaml
+++ b/hieradata/node/r2.yaml
@@ -27,9 +27,13 @@ ca_certs_for_system:
       certfilename: '/etc/pki/tls/certs/cacert_org_root.crt'
     }
 
+# {{{ profile::graphite
+profile::graphite::virtualhost: 'graphite.techtaco.org'
+# }}}
+
 # {{{ profile::grafana
 profile::grafana::monitoring: false
-profile::grafana::site_name: 'grafana.techtaco.org'
+profile::grafana::virtualhost: 'grafana.techtaco.org'
 profile::grafana::ssl_cert: '/etc/pki/tls/certs/wildcard.techtaco.org-server.crt'
 profile::grafana::ssl_key: '/etc/pki/tls/private/wildcard.techtaco.org-server.key'
 profile::grafana::version: '3.1.1'
