--- a/hieradata/node/juicebox.yaml
+++ b/hieradata/node/juicebox.yaml
@@ -42,7 +42,7 @@ profile::grafana::virtualhost: 'grafana.octavisjones.com'
 profile::grafana::ssl_cert: '/etc/pki/tls/certs/wildcard.octavisjones.com-server.crt'
 profile::grafana::ssl_key: '/etc/pki/tls/private/wildcard.octavisjones.com-server.key'
 profile::grafana::version: '5.0.3'
-profile::grafana::rpm_iteration: '1470047149'
+profile::grafana::rpm_iteration: '1'
 profile::grafana::admin_user: 'octavis'
 profile::grafana::admin_pass: 'qwerty!23'
 # }}}
